# nzoth

./: README.md  pyproject.toml
nzoth/: cli.py  worker.py
nzoth/template/: cookiecutter.json
nzoth/template/{{ cookiecutter.app_name }}/: Dockerfile
nzoth/template/{{ cookiecutter.app_name }}/app/: main.py
nzoth/utils/: config.py  template.py
nzoth/utils/models/: project.py
