[tool.poetry]
name = "nzoth"
version = "0.1.0"
description = "Easy way to deploy ML models"
authors = ["Eric Venarusso"]
license = "Apache2"

[tool.poetry.dependencies]
python = "^3.9"
cookiecutter = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
